--- a/jeaf-generator-test-spring/pom.xml
+++ b/jeaf-generator-test-spring/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.6.54</version>
+		<version>1.6.55-SNAPSHOT</version>
 	</parent>
 
 	<name>JEAF Generator Test Spring Code Generation</name>
