Added connectionRequestTimeout and fix cookie bug

--- a/jeaf-generator-test-jeaf-rest-proxy/src/test/resources/RESTProductServiceRESTProxyServiceProviderImpl.properties
+++ b/jeaf-generator-test-jeaf-rest-proxy/src/test/resources/RESTProductServiceRESTProxyServiceProviderImpl.properties
@@ -43,6 +43,10 @@ responseTimeout=100
 # environment.
 connectTimeout=100
 
+# Timeout in milliseconds when requesting a connection from the pool of http connections. This parameter especially
+# becomes important in cases where a connection pool is configured too small or in cases of unexpected high load.
+connectionRequestTimeout=100
+
 #
 # Resilience4J circuit breaker configuration
 #
