--- a/jeaf-generator-test-spring-jersey/src-gen/main/resources/config/application-restproductservice.yml
+++ b/jeaf-generator-test-spring-jersey/src-gen/main/resources/config/application-restproductservice.yml
@@ -13,51 +13,56 @@ rESTProductService:
   # Apache HTTP Client configuration
   http:
     # Maximum size of the connection pool.
-    maxPoolSize: 20
+    maxPoolSize: 5
     
     # Maximum amount of idle connections in the connection pool.
-    maxIdleConnections: 20
+    maxIdleConnections: 5
     
     # Keep alive duration for connection to proxy target (in milliseconds)
-    keepAliveDuration: 60000
+    keepAliveDuration: 20000
     
     #  Parameter configures the time period in milliseconds after which a connection is validated before it is taken 
     # from the pool again.    
     validateAfterInactivityDuration: 10000
     
     # Maximum amount of retries before a call to the REST service is considered to be failed.
-    maxRetries: 1
+    # Be aware that in case of enabled retires server side must support idempotency on writes.
+    maxRetries: 0
     
     # Interval in milliseconds after which the REST service is called again in case that retries are configured.
     retryInterval: 100
     
     # Response timeout in milliseconds for calls to REST service. Please be aware that this is a very sensitive 
     # parameter and needs to be fine-tuned for your purposes.
-    responseTimeout: 10000
+    responseTimeout: 5000
     
     # Timeout in milliseconds to establish connections to the REST service. As connections are pooled this parameter
     # should not have a too strong influence on the overall behavior. However please ensure that it fits to your
     # environment.
-    connectTimeout: 10000
+    connectTimeout: 2000
     
+    # Timeout in milliseconds when requesting a connection from the pool of http connections. This parameter especially
+    # becomes important in cases where a connection pool is configured too small or in cases of unexpected high load.
+    connectionRequestTimeout: 100
+
   # Resilience4J circuit breaker configuration
   circuitbreaker:
     # Failure rate threshold (percent of requests) defines which amount of failed request must be exceeded due to
     # technical problems that the circuit breaker opens and no further request will be sent to the REST service.
     #  
     # Value must between 0 and 100.
-    failureRateThreshold: 30
+    failureRateThreshold: 5
     
     # Duration in milliseconds that the circuit breaker stays open until request will be sent to the REST service again.
     # 
     # The value must be zero or greater.
-    durationInOpenState: 1000
+    durationInOpenState: 20000
     
     # Configures the duration in milliseconds above which calls are considered as slow and increase the slow calls
     # percentage.
     # 
     # The value must be zero or greater.
-    slowRequestDuration: 10000
+    slowRequestDuration: 5000
     
     # Configures the slow request threshold in percentage. The circuit breaker considers a call as slow when the call
     # duration is greater than <code>slowCallDuration</code>. When the percentage of slow calls is equal to or greater
@@ -69,7 +74,7 @@ rESTProductService:
     # Configures the number of permitted calls when the circuit breaker is half open.
     # 
     # The value must be zero or greater.
-    permittedCallsInHalfOpenState: 5
+    permittedCallsInHalfOpenState: 2
     
     # Configures the size of the sliding window in seconds which is used to record the outcome of calls when the circuit
     # breaker is closed.
