--- a/pom.xml
+++ b/pom.xml
@@ -28,15 +28,15 @@
 		<jeaf.x-fun.api.version>1.6.17</jeaf.x-fun.api.version>
 		<jeaf.x-fun.impl.version>1.6.23</jeaf.x-fun.impl.version>
 		<jeaf.tools.api.version>1.6.20</jeaf.tools.api.version>
-		<jeaf.core.api.version>1.6.19-SNAPSHOT</jeaf.core.api.version>
+		<jeaf.core.api.version>1.6.19</jeaf.core.api.version>
 		<jeaf.core.impl.version>1.6.20</jeaf.core.impl.version>
 		<jeaf.persistence.api.version>1.6.13</jeaf.persistence.api.version>
 		<jeaf.junit.extensions.version>1.6.13</jeaf.junit.extensions.version>
 		<jeaf.fastlane.impl.version>1.6.18</jeaf.fastlane.impl.version>
 		<jeaf.workload.api.version>1.6.17</jeaf.workload.api.version>
 		<jeaf.workload.impl.version>1.6.16</jeaf.workload.impl.version>
-		<jeaf.json.api.version>1.6.14-SNAPSHOT</jeaf.json.api.version>
-		<jeaf.json.impl.version>1.6.15-SNAPSHOT</jeaf.json.impl.version>
+		<jeaf.json.api.version>1.6.14</jeaf.json.api.version>
+		<jeaf.json.impl.version>1.6.15</jeaf.json.impl.version>
 		<jeaf.test.model.version>1.0.41</jeaf.test.model.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
