--- a/jeaf-generator-test-open-api-service-objects/pom.xml
+++ b/jeaf-generator-test-open-api-service-objects/pom.xml
@@ -124,6 +124,9 @@
 					<generateValidAnnotationForClasses>true</generateValidAnnotationForClasses>
 					<generateValidationAnnotationsForAssociationsFromMultiplicity>true</generateValidationAnnotationsForAssociationsFromMultiplicity>
 					<generateValidationAnnotationsForAttributesFromMultiplicity>true</generateValidationAnnotationsForAttributesFromMultiplicity>
+					
+					<disableImmutabilityOfBinaryData>true</disableImmutabilityOfBinaryData>
+					<disableImmutabilityOfArrays>false</disableImmutabilityOfArrays>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
