--- a/jeaf-generator-test-open-api-service-objects/pom.xml
+++ b/jeaf-generator-test-open-api-service-objects/pom.xml
@@ -126,7 +126,7 @@
 					<generateValidationAnnotationsForAttributesFromMultiplicity>true</generateValidationAnnotationsForAttributesFromMultiplicity>
 					
 					<disableImmutabilityOfBinaryData>true</disableImmutabilityOfBinaryData>
-					<disableImmutabilityOfArrays>false</disableImmutabilityOfArrays>
+					<disableImmutabilityOfArrays>true</disableImmutabilityOfArrays>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
