--- a/jeaf-generator-test-open-api-service-objects/pom.xml
+++ b/jeaf-generator-test-open-api-service-objects/pom.xml
@@ -127,6 +127,7 @@
 					
 					<disableImmutabilityOfBinaryData>true</disableImmutabilityOfBinaryData>
 					<disableImmutabilityOfArrays>true</disableImmutabilityOfArrays>
+					<disableImmutabilityOfCollections>true</disableImmutabilityOfCollections>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
