JEAF-3094: Added YAML 1.1 compatibility mode

--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
@@ -176,6 +176,21 @@ components:
         a:
           $ref: '#/components/schemas/BidirectA'
 
+    # com.anaptecs.jeaf.junit.openapi.base.BooleanLiteralsEnum
+    BooleanLiteralsEnum:
+      type: string
+      enum:
+        - YES
+        - ON
+        - off
+        - y
+        - n
+        - YEAH
+        - NO
+        - True
+        - FaLsE
+      default: YES
+
     # com.anaptecs.jeaf.junit.openapi.base.CHStopPlace
     CHStopPlace:
       allOf:
