--- a/jeaf-generator-test-open-api/pom.xml
+++ b/jeaf-generator-test-open-api/pom.xml
@@ -137,7 +137,7 @@
 
 					<!-- Define what should be generated. By default nothing is generated. -->
 					<generateOpenAPISpec>true</generateOpenAPISpec>
-					<!-- <generateServiceObjects>true</generateServiceObjects> <generateCustomConstraints>true</generateCustomConstraints> -->
+					<enableYAML11Compatibility>true</enableYAML11Compatibility>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
