JEAF-3099: Added configuration parameter to control if build will break

--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
 		<module>jeaf-generator-test-spring</module>
 		<module>jeaf-generator-test-spring-jersey</module>
 		<module>jeaf-generator-test-spring-rest-proxy</module>
+		<module>jeaf-generator-test-error-handling</module>
 	</modules>
 
 </project>
