--- a/jeaf-generator-test-jeaf-rest-proxy/src-gen/main/resources/RESTProductServiceRESTProxyServiceProviderImpl.properties
+++ b/jeaf-generator-test-jeaf-rest-proxy/src-gen/main/resources/RESTProductServiceRESTProxyServiceProviderImpl.properties
@@ -11,6 +11,9 @@ cookieDomain=
 # Path of the cookie that is used in requests.
 cookiePath=
   
+# Comma separated list of http header names that should be considered to be sensitive.
+sensitiveHeaders=Authorzation
+  
 #
 # Apache HTTP Client configuration
 #
