--- a/jeaf-generator-test-spring-jersey/pom.xml
+++ b/jeaf-generator-test-spring-jersey/pom.xml
@@ -7,7 +7,7 @@
 		<version>1.6.58-SNAPSHOT</version>
 	</parent>
 
-	<name>JEAF Generator Test Spring Jersey Code Generation</name>
+	<name>JEAF Generator Test Spring Jersey</name>
 	<artifactId>jeaf-generator-test-spring-jersey</artifactId>
 	<packaging>jar</packaging>
 
