--- a/jeaf-generator-test-eclipse-papyrus/pom.xml
+++ b/jeaf-generator-test-eclipse-papyrus/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.6.58</version>
+		<version>1.6.59-SNAPSHOT</version>
 	</parent>
 
 	<name>JEAF Generator Test Eclipse Papyrus</name>
