--- a/jeaf-generator-test-spring-jersey/pom.xml
+++ b/jeaf-generator-test-spring-jersey/pom.xml
@@ -119,6 +119,14 @@
 		</dependency>
 
 		<!-- Dependency for mock server which is used to test request delegation. -->
+		
+		<dependency>
+			<groupId>org.mock-server</groupId>
+			<artifactId>mockserver-client-java</artifactId>
+			<version>${mock.server.version}</version>
+			<scope>test</scope>
+		</dependency>		
+
 		<dependency>
 			<groupId>org.mock-server</groupId>
 			<artifactId>mockserver-netty</artifactId>
