--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -876,6 +876,81 @@ paths:
         'default':
           $ref: '#/components/responses/CustomErrorResponse'
 
+  /products/test-date-query-params/{path}:
+    get:
+      operationId: testDateQueryParams
+      parameters:
+        - name: path
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: startTimestamp
+          in: query
+          required: true
+          schema:
+            type: string
+            format: date-time
+        - name: startTime
+          in: query
+          required: true
+          schema:
+            type: string
+            format: time
+        - name: localStartTimestamp
+          in: query
+          required: true
+          schema:
+            type: string
+            format: date-time
+        - name: localStartTime
+          in: query
+          required: true
+          schema:
+            type: string
+            format: time
+        - name: localStartDate
+          in: query
+          required: true
+          schema:
+            type: string
+            format: date
+        - name: calendar
+          in: query
+          required: true
+          schema:
+            type: string
+            format: date-time
+        - name: utilDate
+          in: query
+          required: true
+          schema:
+            type: string
+            format: date-time
+        - name: sqlTimestamp
+          in: query
+          required: true
+          schema:
+            type: string
+            format: date-time
+        - name: sqlTime
+          in: query
+          required: true
+          schema:
+            type: string
+            format: time
+        - name: sqlDate
+          in: query
+          required: true
+          schema:
+            type: string
+            format: date
+      responses:
+        '400':
+          $ref: '#/components/responses/CustomErrorResponse'
+        'default':
+          $ref: '#/components/responses/CustomErrorResponse'
+
 
 security:
   - {}
