--- a/jeaf-generator-test-spring-jersey/pom.xml
+++ b/jeaf-generator-test-spring-jersey/pom.xml
@@ -44,6 +44,18 @@
         </dependency>
 
 		<dependency>
+			<groupId>com.anaptecs.jeaf.rest</groupId>
+			<artifactId>jeaf-rest-request-executor-api</artifactId>
+			<version>${jeaf.rest.api.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.anaptecs.jeaf.rest</groupId>
+			<artifactId>jeaf-rest-request-executor-apache-spring</artifactId>
+			<version>${jeaf.rest.impl.version}</version>
+		</dependency>
+
+		<dependency>
 		    <groupId>org.zalando</groupId>
 		    <artifactId>problem-spring-web</artifactId>
 		    <version>0.23.0</version>
@@ -72,7 +84,7 @@
 		<dependency>
 		    <groupId>com.fasterxml.jackson.datatype</groupId>
 		    <artifactId>jackson-datatype-jsr310</artifactId>
-		    <version>2.13.3</version>
+		    <version>${jackson.version}</version>
 		</dependency>
 		
 		<dependency>
