--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,9 @@
 		<jeaf.workload.impl.version>1.6.16</jeaf.workload.impl.version>
 		<jeaf.json.api.version>1.6.14</jeaf.json.api.version>
 		<jeaf.json.impl.version>1.6.15</jeaf.json.impl.version>
+		<jeaf.rest.api.version>1.6.0-SNAPSHOT</jeaf.rest.api.version>
+		<jeaf.rest.impl.version>1.6.0-SNAPSHOT</jeaf.rest.impl.version>
+		
 		<jeaf.jersey.extensions.version>1.6.0-SNAPSHOT</jeaf.jersey.extensions.version>
 		<jeaf.test.model.version>1.0.43-SNAPSHOT</jeaf.test.model.version>
 		
