--- a/pom.xml
+++ b/pom.xml
@@ -32,13 +32,13 @@
 		<jeaf.core.impl.version>1.6.20</jeaf.core.impl.version>
 		<jeaf.persistence.api.version>1.6.13</jeaf.persistence.api.version>
 		<jeaf.junit.extensions.version>1.6.13</jeaf.junit.extensions.version>
-		<jeaf.fastlane.impl.version>1.6.19-SNAPSHOT</jeaf.fastlane.impl.version>
+		<jeaf.fastlane.impl.version>1.6.19</jeaf.fastlane.impl.version>
 		<jeaf.workload.api.version>1.6.17</jeaf.workload.api.version>
 		<jeaf.workload.impl.version>1.6.16</jeaf.workload.impl.version>
 		<jeaf.json.api.version>1.6.15</jeaf.json.api.version>
 		<jeaf.json.impl.version>1.6.16</jeaf.json.impl.version>
-		<jeaf.jersey.extensions.version>1.6.0-SNAPSHOT</jeaf.jersey.extensions.version>
-		<jeaf.test.model.version>1.0.43-SNAPSHOT</jeaf.test.model.version>
+		<jeaf.jersey.extensions.version>1.6.0</jeaf.jersey.extensions.version>
+		<jeaf.test.model.version>1.0.43</jeaf.test.model.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
 		<spring.boot.version>2.7.2</spring.boot.version>
