--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
 		<jeaf.json.api.version>1.6.15</jeaf.json.api.version>
 		<jeaf.json.impl.version>1.6.16</jeaf.json.impl.version>
 		<jeaf.jersey.extensions.version>1.6.0</jeaf.jersey.extensions.version>
-		<jeaf.rest.api.version>1.6.1-SNAPSHOT</jeaf.rest.api.version>
-		<jeaf.rest.impl.version>1.6.0-SNAPSHOT</jeaf.rest.impl.version>
+		<jeaf.rest.api.version>1.6.1-RC01-SNAPSHOT</jeaf.rest.api.version>
+		<jeaf.rest.impl.version>1.6.1-RC01-SNAPSHOT</jeaf.rest.impl.version>
 		<jeaf.test.model.version>1.0.43</jeaf.test.model.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
