Adjusted generation of configuration

--- a/jeaf-generator-test-jeaf-rest-proxy/src-gen/main/resources/ProductServiceRESTProxyServiceProviderImpl.properties
+++ b/jeaf-generator-test-jeaf-rest-proxy/src-gen/main/resources/ProductServiceRESTProxyServiceProviderImpl.properties
@@ -14,6 +14,12 @@ cookiePath=
 # Comma separated list of http header names that should be considered to be sensitive.
 sensitiveHeaders=Authorzation
   
+# Parameter defines if http requests should be traced.
+traceRequests=true
+
+# Parameter defines if http responses should be traced.
+traceResponses=false
+
 #
 # Apache HTTP Client configuration
 #
