--- a/jeaf-generator-test-spring-rest-proxy/pom.xml
+++ b/jeaf-generator-test-spring-rest-proxy/pom.xml
@@ -44,6 +44,18 @@
         </dependency>
 
 		<dependency>
+			<groupId>com.anaptecs.jeaf.rest</groupId>
+			<artifactId>jeaf-rest-request-executor-api</artifactId>
+			<version>${jeaf.rest.api.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.anaptecs.jeaf.rest</groupId>
+			<artifactId>jeaf-rest-request-executor-apache-spring</artifactId>
+			<version>${jeaf.rest.impl.version}</version>
+		</dependency>
+
+		<dependency>
 		    <groupId>org.zalando</groupId>
 		    <artifactId>problem-spring-web</artifactId>
 		    <version>0.23.0</version>
