--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 		<jeaf.jersey.extensions.version>1.6.0</jeaf.jersey.extensions.version>
 		<jeaf.rest.api.version>1.6.1-RC01-SNAPSHOT</jeaf.rest.api.version>
 		<jeaf.rest.impl.version>1.6.1-RC01-SNAPSHOT</jeaf.rest.impl.version>
-		<jeaf.test.model.version>1.0.43</jeaf.test.model.version>
+		<jeaf.test.model.version>1.0.44-SNAPSHOT</jeaf.test.model.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
 		<spring.boot.version>2.7.2</spring.boot.version>
