--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
@@ -176,6 +176,34 @@ components:
         a:
           $ref: '#/components/schemas/BidirectA'
 
+    # com.anaptecs.jeaf.junit.openapi.base.Booking
+    Booking:
+      type: object
+      additionalProperties: false
+      required:
+        - booking
+      properties:
+        booking:
+          $ref: '#/components/schemas/BookingID'
+
+    # com.anaptecs.jeaf.junit.openapi.base.BookingID
+    BookingID:
+      type: object
+      additionalProperties: false
+      required:
+        - inventory
+        - referenceID
+        - externalRefID
+      properties:
+        inventory:
+          $ref: '#/components/schemas/InventoryType'
+        referenceID:
+          type: string
+          nullable: false
+        externalRefID:
+          type: string
+          nullable: false
+
     # com.anaptecs.jeaf.junit.openapi.base.BooleanLiteralsEnum
     BooleanLiteralsEnum:
       type: string
@@ -401,6 +429,33 @@ components:
               type: string
               nullable: false
 
+    # com.anaptecs.jeaf.junit.openapi.base.ComplexBookingID
+    ComplexBookingID:
+      type: object
+      additionalProperties: false
+      required:
+        - referenceID
+        - bookingIDs
+        - complexBookingType
+      properties:
+        referenceID:
+          type: string
+          nullable: false
+        bookingIDs:
+          type: array
+          items:
+            $ref: '#/components/schemas/BookingID'
+          minItems: 1
+        complexBookingType:
+          $ref: '#/components/schemas/ComplexBookingType'
+
+    # com.anaptecs.jeaf.junit.openapi.base.ComplexBookingType
+    ComplexBookingType:
+      type: string
+      x-extensible-enum:
+        - COMPLEX
+        - VERY_COMPLEX
+
     # com.anaptecs.jeaf.junit.openapi.base.DateObject
     DateObject:
       type: object
@@ -512,6 +567,14 @@ components:
               type: integer
               format: int32
               nullable: false
+
+    # com.anaptecs.jeaf.junit.openapi.base.InventoryType
+    InventoryType:
+      type: string
+      enum:
+        - SBB
+        - SNCF
+        - DB
 
     # com.anaptecs.jeaf.junit.openapi.base.Leg
     Leg:
@@ -1431,4 +1494,18 @@ components:
         - $ref: '#/components/schemas/StopPlaceRef'
         - type: object
           additionalProperties: false
+
+    # com.anaptecs.jeaf.junit.openapi.base.WeirdBooking
+    WeirdBooking:
+      type: object
+      additionalProperties: false
+      required:
+        - booking
+      properties:
+        booking:
+          $ref: '#/components/schemas/ComplexBookingID'
+        additionalBookings:
+          type: array
+          items:
+            $ref: '#/components/schemas/ComplexBookingID'
 
