--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 		<jeaf.json.api.version>1.6.15</jeaf.json.api.version>
 		<jeaf.json.impl.version>1.6.16</jeaf.json.impl.version>
 		<jeaf.jersey.extensions.version>1.6.0</jeaf.jersey.extensions.version>
-		<jeaf.rest.api.version>1.6.1-RC02</jeaf.rest.api.version>
+		<jeaf.rest.api.version>1.6.1-RC03-SNAPSHOT</jeaf.rest.api.version>
 		<jeaf.rest.impl.version>1.6.1-RC02-SNAPSHOT</jeaf.rest.impl.version>
 		<jeaf.test.model.version>1.0.44-SNAPSHOT</jeaf.test.model.version>
 		
