Code changes due to model changes

--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
@@ -435,11 +435,16 @@ components:
       additionalProperties: false
       required:
         - referenceID
+        - internalID
         - bookingIDs
         - complexBookingType
       properties:
         referenceID:
           type: string
+          nullable: false
+        internalID:
+          type: integer
+          format: int64
           nullable: false
         bookingIDs:
           type: array
