Code changes due to model changes

--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
@@ -181,9 +181,9 @@ components:
       type: object
       additionalProperties: false
       required:
-        - booking
+        - bookingID
       properties:
-        booking:
+        bookingID:
           $ref: '#/components/schemas/BookingID'
 
     # com.anaptecs.jeaf.junit.openapi.base.BookingID
