Prepared release candiate build

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>com.anaptecs.jeaf.generator</groupId>
 	<artifactId>jeaf-generator-project</artifactId>
-	<version>1.6.61-SNAPSHOT</version>
+	<version>1.6.61-RC01-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>JEAF Generator Project</name>
 	<description>JEAF Generator can be used to generate different kinds of classes from UML Models and thus speed up and professionalize software development.</description>
@@ -39,8 +39,8 @@
 		<jeaf.json.impl.version>1.6.16</jeaf.json.impl.version>
 		<jeaf.jersey.extensions.version>1.6.0</jeaf.jersey.extensions.version>
 		<jeaf.rest.api.version>1.6.1-RC02</jeaf.rest.api.version>
-		<jeaf.rest.impl.version>1.6.1-RC02-SNAPSHOT</jeaf.rest.impl.version>
-		<jeaf.test.model.version>1.0.44-SNAPSHOT</jeaf.test.model.version>
+		<jeaf.rest.impl.version>1.6.1-RC02</jeaf.rest.impl.version>
+		<jeaf.test.model.version>1.0.44</jeaf.test.model.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
 		<spring.boot.version>2.7.2</spring.boot.version>
