--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 		<jeaf.json.impl.version>1.6.16</jeaf.json.impl.version>
 		<jeaf.jersey.extensions.version>1.6.0</jeaf.jersey.extensions.version>
 		<jeaf.rest.api.version>1.6.1-RC03-SNAPSHOT</jeaf.rest.api.version>
-		<jeaf.rest.impl.version>1.6.1-RC02-SNAPSHOT</jeaf.rest.impl.version>
+		<jeaf.rest.impl.version>1.6.1-RC03-SNAPSHOT</jeaf.rest.impl.version>
 		<jeaf.test.model.version>1.0.44-SNAPSHOT</jeaf.test.model.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
@@ -76,7 +76,11 @@
 		<module>jeaf-generator-test-open-api</module>
 		<module>jeaf-generator-test-open-api-service-objects</module>
 		<module>jeaf-generator-test-open-api-internal-service-objects</module>
+		
+		<!-- TODO: Integrate Eclipse Papyrus Tests in standard build as soon as JEAF-3119 is fixed -->
+		<!--  
 		<module>jeaf-generator-test-eclipse-papyrus</module>
+		-->
 		<module>jeaf-generator-test-jeaf-rest-proxy</module>
 		<module>jeaf-generator-test-spring</module>
 		<module>jeaf-generator-test-spring-jersey</module>
