Added tests for compisite type conver and generated code

--- a/jeaf-generator-test-spring-jersey/pom.xml
+++ b/jeaf-generator-test-spring-jersey/pom.xml
@@ -182,6 +182,7 @@
 					<generateJAXRSAnnotations>true</generateJAXRSAnnotations>
 					<generateServiceInterfaces>true</generateServiceInterfaces>
 					<generatePOJOs>true</generatePOJOs>
+					<generatePublicObjectView>true</generatePublicObjectView>
 					<generateJSONSerializers>true</generateJSONSerializers>
 					<generateJacksonAnnotations>true</generateJacksonAnnotations>
 					
