JEAF-3122 Added REST path prefix to generated code and updated tests

--- a/jeaf-generator-test-spring/pom.xml
+++ b/jeaf-generator-test-spring/pom.xml
@@ -134,6 +134,7 @@
 					<targetRuntime>SPRING</targetRuntime>
 					<restLibrary>SPRING_WEB_MVC</restLibrary>
 					<generateRESTResources>true</generateRESTResources>
+					<restPathPrefix>/nova/prefix</restPathPrefix>
 					<generateServiceInterfaces>true</generateServiceInterfaces>
 					<generatePOJOs>true</generatePOJOs>
 					<generateJSONSerializers>true</generateJSONSerializers>
