Migrated additional checks to new mechanism

--- a/jeaf-generator-test-error-handling/pom.xml
+++ b/jeaf-generator-test-error-handling/pom.xml
@@ -62,6 +62,7 @@
 					<generateOpenAPISpec>true</generateOpenAPISpec>
 					<generatePOJOs>true</generatePOJOs>
 					<generateServiceObjects>true</generateServiceObjects>
+					<generateDomainObjects>true</generateDomainObjects>
 					
 					<!-- For test purposes the build does not break if we face problems here as this is the intention of this Maven project -->
 					<breakBuildOnGeneratorError>false</breakBuildOnGeneratorError>
