Migrated additional checks.

--- a/jeaf-generator-test-error-handling/pom.xml
+++ b/jeaf-generator-test-error-handling/pom.xml
@@ -59,6 +59,7 @@
 
 					<!-- Define what should be generated. By default nothing is generated. -->
 					<generateRESTResources>true</generateRESTResources>
+					<generateServiceInterfaces>true</generateServiceInterfaces>
 					<generateOpenAPISpec>true</generateOpenAPISpec>
 					<generatePOJOs>true</generatePOJOs>
 					<generateServiceObjects>true</generateServiceObjects>
