--- a/jeaf-generator-test-error-handling/pom.xml
+++ b/jeaf-generator-test-error-handling/pom.xml
@@ -64,6 +64,7 @@
 					<generatePOJOs>true</generatePOJOs>
 					<generateServiceObjects>true</generateServiceObjects>
 					<generateDomainObjects>true</generateDomainObjects>
+					<generatePersistentObjects>true</generatePersistentObjects>
 					
 					<!-- For test purposes the build does not break if we face problems here as this is the intention of this Maven project -->
 					<breakBuildOnGeneratorError>false</breakBuildOnGeneratorError>
