--- a/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
@@ -292,7 +292,6 @@ components:
           additionalProperties: false
           required:
             - childAAAttribute
-            - sizedArray
             - requiredArray
           properties:
             childAAAttribute:
@@ -304,11 +303,12 @@ components:
               format: int32
               nullable: false
             sizedArray:
-              type: integer
-              format: int32
-              minLength: 10
-              maxLength: 100
-              nullable: false
+              type: array
+              items:
+                type: integer
+                format: int32
+              minItems: 10
+              maxItems: 100
             requiredArray:
               type: array
               items:
@@ -327,16 +327,15 @@ components:
         - $ref: '#/components/schemas/ParentClass'
         - type: object
           additionalProperties: false
-          required:
-            - childBAttribute
           properties:
             childBAttribute:
               description: >-
                 A child attribute
-              type: boolean
-              minLength: 11
-              maxLength: 42
-              nullable: false
+              type: array
+              items:
+                type: boolean
+              minItems: 11
+              maxItems: 42
             composition:
               description: >-
                 the composition
