JEAF-3134 Added check for generated OpenAPI spec

--- a/jeaf-generator-test-open-api/pom.xml
+++ b/jeaf-generator-test-open-api/pom.xml
@@ -151,6 +151,23 @@
 			</plugin>
 
 			<plugin>
+				<groupId>it.traeck.tools.openapi</groupId>
+				<artifactId>openapi-validator-maven-plugin</artifactId>
+				<version>${openapi-validator-plugin}</version>
+				<executions>
+					  <execution>
+					    <goals>
+					      	<goal>validate</goal>
+					    </goals>
+					    <phase>generate-sources</phase>
+					    <configuration>
+					      <inputSpec>${project.basedir}/src-gen/main/resources/products/product-services.yml</inputSpec>
+					    </configuration>
+					  </execution>
+				</executions>			
+			</plugin>
+
+			<plugin>
 				<groupId>io.swagger.codegen.v3</groupId>
 				<artifactId>swagger-codegen-maven-plugin</artifactId>
 				<version>${swagger.codegen.plugin.version}</version>
@@ -315,6 +332,19 @@
 									</pluginExecutionFilter>
 									<action>
 										<ignore />
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>it.traeck.tools.openapi</groupId>
+										<artifactId>openapi-validator-maven-plugin</artifactId>
+										<versionRange>[1.0.2,)</versionRange>
+										<goals>
+											<goal>validate</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
